--- a/index.html
+++ b/index.html
@@ -1,112 +1,90 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Canlı Ortak Depo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    body { font-family: Arial, sans-serif; background:#f4f6f9; padding:20px }
-    .card { background:#fff; padding:15px; border-radius:10px; margin-bottom:15px; box-shadow: 0 2px 5px rgba(0,0,0,0.1) }
-    input, button { padding:10px; margin:4px; border-radius:5px; border:1px solid #ddd }
-    button { cursor:pointer; font-weight:bold }
-    table { width:100%; border-collapse:collapse }
-    th, td { padding:10px; border-bottom:1px solid #ddd; text-align:center }
-    .success { background:#2ecc71; color:#fff; border:none }
-    .danger { background:#e74c3c; color:#fff; border:none }
-    .status { font-size: 12px; color: #7f8c8d; margin-bottom: 10px }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Canlı Ortak Depo</title>
+    <style>
+        body { font-family: sans-serif; background: #f0f2f5; padding: 20px; text-align: center; }
+        .card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); max-width: 400px; margin: 10px auto; }
+        input { width: 80%; padding: 10px; margin: 5px; border: 1px solid #ddd; border-radius: 5px; }
+        button { padding: 10px 20px; background: #2ecc71; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
+        .delete-btn { background: #e74c3c; padding: 5px 10px; margin-left: 10px; }
+        table { width: 100%; margin-top: 20px; border-collapse: collapse; }
+        th, td { padding: 10px; border-bottom: 1px solid #eee; }
+        #status { font-size: 12px; color: #666; }
+    </style>
 </head>
 <body>
 
-<h1>🌐 Canlı Ortak Depo Sistemi</h1>
-<div id="status" class="status">Veriler yükleniyor...</div>
+    <h2>🌐 Canlı Ortak Depo</h2>
+    <p id="status">Bağlanıyor...</p>
 
-<div class="card">
-  <input id="name" placeholder="Ürün Adı" />
-  <input id="qty" type="number" placeholder="Adet" />
-  <button class="success" onclick="addProduct()">➕ Ortak Listeye Ekle</button>
-</div>
+    <div class="card">
+        <input type="text" id="pName" placeholder="Ürün Adı">
+        <input type="number" id="pQty" placeholder="Adet">
+        <button onclick="addItem()">Ekle</button>
+    </div>
 
-<div class="card">
-  <table>
-    <thead>
-      <tr><th>Ürün</th><th>Stok</th><th>İşlem</th></tr>
-    </thead>
-    <tbody id="table"></tbody>
-  </table>
-</div>
+    <div class="card">
+        <table>
+            <thead>
+                <tr><th>Ürün</th><th>Adet</th><th>İşlem</th></tr>
+            </thead>
+            <tbody id="list"></tbody>
+        </table>
+    </div>
 
-<script>
-// BU KISIM VERİLERİ İNTERNETTE TUTAR
-const BIN_ID = '65a417531f5677401f1e687d'; // Örnek bir ortak havuz ID'si
-const API_KEY = '$2a$10$YourApiKeyHere'; // Gerçek bir sistem için burası özelleştirilir
+    <script>
+        // Herkesin ortak kullanacağı gizli hafıza adresi
+        const url = "https://api.jsonbin.io/v3/b/6786c2e8ad19ca34f8ec8a01";
+        const key = "$2a$10$9v1P/C.Y6y5Xh8C0YxXWneUeYV7uV9p8L2Xq9zR7Z6R7Z6R7Z6";
 
-// Şimdilik herkesin aynı veriyi görebileceği ÜCRETSİZ bir test servisi kullanalım
-const API_URL = "https://api.jsonbin.io/v3/b/65a417531f5677401f1e687d";
+        async function getData() {
+            try {
+                const res = await fetch(url + "/latest", { headers: { "X-Master-Key": key }});
+                const data = await res.json();
+                render(data.record.products || []);
+                document.getElementById('status').innerText = "✅ Canlı Bağlantı Aktif";
+            } catch (e) { document.getElementById('status').innerText = "❌ Bağlantı Hatası"; }
+        }
 
-async function loadData() {
-    try {
-        const res = await fetch(API_URL + "/latest", {
-            headers: { "X-Master-Key": "$2a$10$9v1P/C.Y6y5Xh8C0YxXWneUeYV7uV9p8L2Xq9zR7Z6R7Z6R7Z6" } // Test anahtarı
-        });
-        const json = await res.json();
-        render(json.record.products);
-        document.getElementById('status').innerText = "✅ Veriler canlı güncellendi.";
-    } catch (e) {
-        document.getElementById('status').innerText = "❌ Veri çekilemedi.";
-    }
-}
+        async function updateData(newList) {
+            document.getElementById('status').innerText = "⏳ Güncelleniyor...";
+            await fetch(url, {
+                method: 'PUT',
+                headers: { "Content-Type": "application/json", "X-Master-Key": key },
+                body: JSON.stringify({ products: newList })
+            });
+            getData();
+        }
 
-async function saveData(products) {
-    document.getElementById('status').innerText = "⏳ Kaydediliyor...";
-    await fetch(API_URL, {
-        method: 'PUT',
-        headers: {
-            "Content-Type": "application/json",
-            "X-Master-Key": "$2a$10$9v1P/C.Y6y5Xh8C0YxXWneUeYV7uV9p8L2Xq9zR7Z6R7Z6R7Z6"
-        },
-        body: JSON.stringify({ products })
-    });
-    loadData();
-}
+        function render(items) {
+            const list = document.getElementById('list');
+            list.innerHTML = "";
+            items.forEach((item, i) => {
+                list.innerHTML += `<tr><td>${item.name}</td><td>${item.qty}</td><td><button class="delete-btn" onclick="deleteItem(${i})">Sil</button></td></tr>`;
+            });
+            window.currentItems = items;
+        }
 
-function render(d) {
-    const tableEl = document.getElementById('table');
-    tableEl.innerHTML = "";
-    d.forEach((p, i) => {
-        tableEl.innerHTML += `<tr>
-            <td>${p.name}</td><td>${p.qty}</td>
-            <td><button class="danger" onclick="deleteProduct(${i})">Sil</button></td>
-        </tr>`;
-    });
-}
+        async function addItem() {
+            const name = document.getElementById('pName').value;
+            const qty = document.getElementById('pQty').value;
+            if(!name || !qty) return alert("Doldur!");
+            const newList = [...(window.currentItems || []), { name, qty }];
+            await updateData(newList);
+            document.getElementById('pName').value = "";
+            document.getElementById('pQty').value = "";
+        }
 
-async function addProduct() {
-    const n = document.getElementById('name').value;
-    const q = document.getElementById('qty').value;
-    if(!n || !q) return alert("Eksik bilgi!");
-    
-    const res = await fetch(API_URL + "/latest", { headers: { "X-Master-Key": "$2a$10$9v1P/C.Y6y5Xh8C0YxXWneUeYV7uV9p8L2Xq9zR7Z6R7Z6R7Z6" }});
-    const json = await res.json();
-    const products = json.record.products;
-    products.push({ name: n, qty: Number(q) });
-    await saveData(products);
-}
+        async function deleteItem(index) {
+            const newList = window.currentItems.filter((_, i) => i !== index);
+            await updateData(newList);
+        }
 
-async function deleteProduct(index) {
-    const res = await fetch(API_URL + "/latest", { headers: { "X-Master-Key": "$2a$10$9v1P/C.Y6y5Xh8C0YxXWneUeYV7uV9p8L2Xq9zR7Z6R7Z6R7Z6" }});
-    const json = await res.json();
-    const products = json.record.products;
-    products.splice(index, 1);
-    await saveData(products);
-}
-
-// Sayfa açıldığında verileri çek
-loadData();
-// Her 10 saniyede bir başkası bir şey ekledi mi diye kontrol et
-setInterval(loadData, 10000);
-
-</script>
+        getData();
+        setInterval(getData, 5000); // 5 saniyede bir otomatik yenile (başkası bir şey ekledi mi diye)
+    </script>
 </body>
 </html>
